--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
 <script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<!--<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
 <!--<script src="{{ "/js/codeboy.min.js " | prepend: site.baseurl }}"></script>-->
