--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,7 +48,7 @@
 <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<!--<script src="{{ "/js/codeboy.min.js " | prepend: site.baseurl }}"></script>-->
+<script src="{{ "/js/codeboy.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- TODO: only load in tag.html -->
 <script src="{{ "/js/jquery.tagcloud.js" | prepend: site.baseurl }}" type="text/javascript" charset="utf-8"></script>
