--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -115,5 +115,5 @@ $(document).ready(function(){
 </script>
 
 <div style="display:none;">
-  <!--<script src="//s19.cnzz.com/z_stat.php?id=1000478693&web_id=1000478693" language="JavaScript"></script>-->
+  <script src="//s19.cnzz.com/z_stat.php?id=1000478693&web_id=1000478693" language="JavaScript"></script>
 </div>
